# netease-music-api

./: Cargo.toml  LICENSE  README.md
config/: conf.toml
src/: conf.rs  environment.rs  lib.rs  req.rs  routes.rs
src/conf/: basic_config.rs  error.rs  wrapper_config.rs
src/req/: crypto.rs  forward.rs  request.rs
src/routes/: album.rs  artist.rs  login.rs  lyric.rs  ontest.rs  others.rs  user.rs
