[package]
name = "wy_music_api"
version = "0.1.0"
authors = ["wang <wg1995@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
toml = "0.5"
serde = {version="1.0", features=["derive"]}
num_cpus = "1.13.0"

actix-web = { version = "3.3", features = ["rustls"] }
actix-rt = "2"
awc = "2.0.3"
lazy_static = "1.4.0"
rustls = "0.19"

openssl = "0.10"

rand = "0.7.3"
base64 = "0.13.0"
rand_core = "0.6.0"
rustc-serialize = "0.3.24"
md5 = "0.7.0"
url = "2.2.0"
regex = "1.4.2"

serde_json = "1.0"
queryst = "2.1.0"

futures = "0.3"
# futures-core = "0.3.0"
# futures-util = "0.3"